--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Diary of a seeker</title>
  </head>
  <body>
-  Well, what to write? ... I am still thinking
+     So who is a seeker? To seek something, one must admit that one doesn't have that thing which one is seeking.
+     Is it easy to admit that? I don't think so. To be a seeker, one must have humility and thorough understanding that one thoroughly and anxiously needs that thing which one is seeking.
  </body>
 </html>
