--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <title>Diary of a seeker</title>
  </head>
  <body>
-     So who is a seeker? To seek something, one must admit that one doesn't have that thing which one is seeking.
-     Is it easy to admit that? I don't think so. To be a seeker, one must have humility and thorough understanding that one thoroughly and anxiously needs that thing which one is seeking.
+   <p>
+    So who is a seeker? To seek something, one must admit that one doesn't have that thing which one is seeking.
+   </p>
+   <p>
+    Is it easy to admit that? I don't think so.
+    To be a seeker, one must have humility and thorough understanding that one anxiously needs that thing which one is seeking.
+   </p>
  </body>
 </html>
